[package]

name = "rustache-cli"
version = "0.0.1"
authors = ["Fleur Dragan <fleur@obscure.org>"]

[[bin]]

name = "rustache-cli"
path = "src/main.rs"

[dependencies.memstream]
git = "https://github.com/seanchen1991/rust-memstream.git"

[dependencies.rustache]
git = "https://github.com/rustache/rustache.git"